PC平台调试和集成CI